transcrypt/development/manual_tests/static_types/static_types.out

Transcrypt (TM) Python to JavaScript Small Sane Subset Transpiler Version 3.6.30
Copyright (C) Geatec Engineering. License: Apache 2.0

Performing static type validation on application: /mnt/D/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/static_types.py
The following inconsistencies were found:
	mod2/__init__.py:2: error: Incompatible return value type (got "int", expected "str")
	mod1.py:3: error: Incompatible types in assignment (expression has type "float", variable has type "int")
	mod1.py:4: error: Incompatible return value type (got "str", expected "int")
	static_types.py:8: error: Incompatible types in assignment (expression has type "float", variable has type "int")
	static_types.py:16: error: Incompatible return value type (got "int", expected Iterator[int])
	static_types.py:19: error: No return value expected
	static_types.py:26: error: No return value expected
	


Error while compiling (offending file last):
	File '/mnt/D/activ_tosh/geatec/transcrypt/qquick/Transcrypt/transcrypt/development/manual_tests/static_types/static_types.py', line 8, namely:
	
	testVar: <SYNTAX FAULT]  int = 3.5

Aborted
